# free_lunch

./: .env  .example-env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
assets/: active-table.js  mvp.css
justfiles/: hurl.just
src/: assets.rs  main.rs  page.rs  state.rs  test_table.rs
src/db/: mod.rs
src/tec_endpoints/: mod.rs
tests/: health.hurl  variables
