[package]
name = "free_lunch"
version = "0.1.0"
edition = "2024"
authors = [ "Silen Celeste Locatelli, LunchTimeCode"]

[dependencies]
rocket ={version = "0.5.0"}
maud = {version = "0.27"}
static_hero_icons = "0.3.0"
include_directory = "0.1.1"
libsql = "0.9.0"
dotenvy = "0.15.7"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["http2", "charset", "rustls-tls"]
